--- a/stimuli/main_stimuli.html
+++ b/stimuli/main_stimuli.html
@@ -32,6 +32,7 @@
 
     })
     var modifier_list = ['slightly', 'kind of', 'quite', 'very', 'extremely']
+    var participant_condition = parseInt(subject_id,36) %5
 
     // Define `url_write_data_php` and `output_filename` for the `write_data_to_server` function
     var url_experiment_dir = "http://18.18.93.98:8004/"
@@ -48,40 +49,63 @@
     var timeline = [];
 
     for (var i = 0; i < data.length/2; i++) {
-        if (i%5 == 0) {
-            // Shuffle the modifier list every 5 trials
-            modifier_list = jsPsych.randomization.shuffle(modifier_list);
-        }
         var trial = {
             type: jsPsychHtmlSliderResponse,
-            stimulus: '<p class="stimulus">' + data[2*i]['scenarios'].replace("[modifier]", modifier_list[i%5]) + '</p><p class="scale">' + '<b>' + capitalizeFirstLetter(data[2*i]['question']) + '</b></p>',
+            stimulus: '<p class="stimulus">' + data[2*i]['scenarios'].replace("[modifier]", modifier_list[(i+participant_condition)%5]) + '</p><p class="scale">' + '<b>' + capitalizeFirstLetter(data[2*i]['question']) + '</b></p>',
             require_movement: true,
-            labels: [data[2*i]['left of slider'], data[2*i]['right of slider']],
+            labels: [data[2*i]['left_label'], data[2*i]['right_label']],
+            group: i
         };
         timeline.push(trial);
         var trial = {
             type: jsPsychHtmlSliderResponse,
             stimulus: '<p class="stimulus">' + data[2*i]['scenarios'].replace("[modifier]",'') + '</p><p class="scale">' + '<b>' + capitalizeFirstLetter(data[2*i]['question']) + '</b></p>',
             require_movement: true,
-            labels: [data[2*i]['left of slider'], data[2*i]['right of slider']],
+            labels: [data[2*i]['left_label'], data[2*i]['right_label']],
+            group: i
         };
         timeline.push(trial);
         var trial = {
             type: jsPsychHtmlSliderResponse,
-            stimulus: '<p class="stimulus">' + data[2*i+1]['scenarios'].replace("[modifier]",  modifier_list[i%5]) + '</p><p class="scale">' + '<b>' + capitalizeFirstLetter(data[2*i+1]['question']) + '</b></p>',
+            stimulus: '<p class="stimulus">' + data[2*i+1]['scenarios'].replace("[modifier]",  modifier_list[(i+participant_condition)%5]) + '</p><p class="scale">' + '<b>' + capitalizeFirstLetter(data[2*i+1]['question']) + '</b></p>',
             require_movement: true,
-            labels: [data[2*i+1]['left of slider'], data[2*i+1]['right of slider']],
+            labels: [data[2*i+1]['left_label'], data[2*i+1]['right_label']],
+            group: i
         };
         timeline.push(trial);
         var trial = {
             type: jsPsychHtmlSliderResponse,
             stimulus: '<p class="stimulus">' + data[2*i+1]['scenarios'].replace("[modifier]", '') + '</p><p class="scale">' + '<b>' + capitalizeFirstLetter(data[2*i+1]['question']) + '</b></p>',
             require_movement: true,
-            labels: [data[2*i+1]['left of slider'], data[2*i+1]['right of slider']],
+            labels: [data[2*i+1]['left_label'], data[2*i+1]['right_label']],
+            group: i
         };
         timeline.push(trial);
     }
-    timeline = jsPsych.randomization.shuffle(timeline)
+    function shuffleWithMinDistance(trials, minDist) {
+        let shuffled, valid = false;
+        count=0
+        while (!valid) {
+            count+=1
+            shuffled = jsPsych.randomization.shuffle(trials);
+            valid = true;
+            for (let i = 0; i < shuffled.length && valid; i++) {
+                for (let j = i + 1; j <= i + minDist && j < shuffled.length; j++) {
+                    if (shuffled[i].group === shuffled[j].group) {
+                        valid = false;
+                        break;
+                    }
+                }
+            }
+            if (count%100==0){
+                console.log("Still trying to shuffle, attempt number "+count)
+            }
+        }
+        return shuffled;
+    }
+    //concatenate into single timeline but same group can't be adjacent
+    timeline=shuffleWithMinDistance(timeline,4)
+    // alternate between timeline and timeline2
     var consent = {
         type: jsPsychExternalHtml,
         url: "stimuli_en/consent.html",
