--- a/stimuli/main_stimuli.html
+++ b/stimuli/main_stimuli.html
@@ -48,7 +48,7 @@
     // Initialize a timeline (just an empty array)
     var timeline = [];
 
-    for (var i = 0; i < 2; i++) {
+    for (var i = 0; i < data.length/2; i++) {
         var trial = {
             type: jsPsychHtmlSliderResponse,
             stimulus: '<p class="stimulus">' + data[2*i]['scenarios'].replace("[modifier]", modifier_list[(i+participant_condition)%5]) + '</p><p class="scale">' + '<b>' + capitalizeFirstLetter(data[2*i]['question']) + '</b></p>',
@@ -105,6 +105,10 @@
     }
     //concatenate into single timeline but same group can't be adjacent
     timeline=shuffleWithMinDistance(timeline,3)
+
+    // 👇 ADD THIS LINE FOR TESTING
+    timeline = timeline.slice(0, 1)
+    
     // alternate between timeline and timeline2
     var consent = {
         type: jsPsychExternalHtml,
